--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 For å commite:
-git commit -m"I'm lazy" -a && git push
+git pull && git commit -m"I'm lazy" -a && git push
 
 For å update:
 git pull
