test commit vegardoj

--- a/README
+++ b/README
@@ -7,3 +7,5 @@ git pull
 HVIS DU FUCKA OPP OG KLARTE Å SKRIVE RM OG VIL TILBAKE (OBS! Forkaster alle dine endringer):
 git reset --hard origin
 (voila)
+
+test vegardoj
