--- a/README
+++ b/README
@@ -8,5 +8,6 @@ HVIS DU FUCKA OPP OG KLARTE Å SKRIVE RM OG VIL TILBAKE (OBS! Forkaster alle din
 git reset --hard origin
 (voila)
 
-test2 vegardoj
-test lilfire
+
+Kommando:
+python manage.py runserver
