--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+For å sette navn og mail på innsjekingene:
+$ git config --global user.name "Tekkub"
+$ git config --global user.email "tekkub@gmail.com"
+
 For å commite:
 git pull && git commit -m"I'm lazy" -a && git push
 
